[package]
name = "timerr-cli"
version = "0.1.0"
edition = "2024"
description = "Rust rewrite of timer-cli featuring ASCII fonts, color options, and a polished countdown experience"
license = "Apache-2.0"
repository = "https://github.com/Ozdotdotdot/timerr"
readme = "README.md"
keywords = ["timer", "cli", "productivity", "countdown"]
categories = ["command-line-utilities"]

[[bin]]
name = "timerr"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
crossterm = "0.27"
regex = "1.10"
unicode-width = "0.1"
ctrlc = "3.4"
